--- a/scheming/wrangler.toml
+++ b/scheming/wrangler.toml
@@ -2,5 +2,5 @@ name = "scheming"
 type = "webpack"
 zone_id = ""
 private = false
-account_id = "a9290ba9f33f8d1f0def716cba556928"
+account_id = ""
 route = ""
