--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -5,6 +5,8 @@ LABEL "com.github.actions.description"="Deploy"
 LABEL "com.github.actions.icon"="upload-cloud"
 LABEL "com.github.actions.color"="black"
 
+RUN yarn global add now@11.0.6
+
 COPY ./deploy.sh /
 
 WORKDIR /
