--- a/benchmark-reporter/package.json
+++ b/benchmark-reporter/package.json
@@ -22,7 +22,7 @@
     "jest": "^24.0.0",
     "nock": "^10.0.0",
     "nodemon": "^1.17.2",
-    "smee-client": "^1.0.2",
+    "smee-client": "^1.0.2"
   },
   "engines": {
     "node": ">= 8.3.0"
