Remove extra files

--- a/benchmarks-image-service/package.json
+++ b/benchmarks-image-service/package.json
@@ -11,10 +11,12 @@
     "@vx/group": "0.0.189",
     "@vx/pattern": "0.0.189",
     "@vx/scale": "0.0.189",
-    "@vx/stats": "file:stats",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "stats-lite": "^2.2.0"
+    "stats-lite": "^2.2.0",
+    "classnames": "^2.2.5",
+    "d3-shape": "^1.2.0",
+    "prop-types": "^15.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
